// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header Component matches error snapshot 1`] = `
<header
  className="Header"
>
  <div
    className="h-error"
  >
    There is an error
  </div>
  <Link
    aria-label="Return to the Take Note Form"
    className="h-logo"
    replace={false}
    to="/"
  >
    <img
      alt="The Nordstrom Notes logo"
      src="nordstrom-notes-logo.png"
    />
  </Link>
  <nav
    className="h-nav-group"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      aria-label="Click to return to the Take Note form"
      className="h-take-note btn"
      exact={true}
      to="/"
    >
      Make Note
    </NavLink>
    <NavLink
      activeClassName="active"
      aria-current="page"
      aria-label="Click to view your notable notes"
      className="h-notable-notes btn"
      exact={true}
      to="/notes"
    >
      Notable Notes
    </NavLink>
  </nav>
</header>
`;

exports[`Header Header Component matches the snapshot 1`] = `
<header
  className="Header"
>
  <div
    className="hidden"
  />
  <Link
    aria-label="Return to the Take Note Form"
    className="h-logo"
    replace={false}
    to="/"
  >
    <img
      alt="The Nordstrom Notes logo"
      src="nordstrom-notes-logo.png"
    />
  </Link>
  <nav
    className="h-nav-group"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      aria-label="Click to return to the Take Note form"
      className="h-take-note btn"
      exact={true}
      to="/"
    >
      Make Note
    </NavLink>
    <NavLink
      activeClassName="active"
      aria-current="page"
      aria-label="Click to view your notable notes"
      className="h-notable-notes btn"
      exact={true}
      to="/notes"
    >
      Notable Notes
    </NavLink>
  </nav>
</header>
`;
